Fixes text overlap on mobile with no results

--- a/app/styles/pages/offsite.scss
+++ b/app/styles/pages/offsite.scss
@@ -170,8 +170,9 @@ google-youtube {
   }
   .action__links {
     h4 {
-      top: 50px;
       padding: $mobileKeyline;
+      top: 80px;
+      z-index: 1;
     }
   }
   .navbar__overlay--extended {
